--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,8 @@
 <% if resource.errors.any? %>
   <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
+    <ul class="mb-4">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="block text-red-600 font-bold text-base mb-2 bg-red-50 rounded px-3 py-2 border border-red-200"><%= message %></li>
       <% end %>
     </ul>
   </div>
